// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddPaymentMethodButton should render correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "flexDirection": "row",
      "gap": 12,
      "justifyContent": "center",
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <test-file-stub
    fill="#F56522"
    style={
      [
        {
          "height": 24,
          "width": 24,
        },
        {
          "height": 28,
          "width": 28,
        },
      ]
    }
  />
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "color": "#F56522",
          "flexShrink": 1,
          "fontFamily": "Baloo2-Bold",
          "fontSize": 20,
          "letterSpacing": 0.2,
          "lineHeight": 32,
        },
        false,
      ]
    }
  >
    add new currency /
payment method
  </Text>
</View>
`;

exports[`AddPaymentMethodButton should render correctly with isCash 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "flexDirection": "row",
      "gap": 12,
      "justifyContent": "center",
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <test-file-stub
    fill="#F56522"
    style={
      [
        {
          "height": 24,
          "width": 24,
        },
        {
          "height": 28,
          "width": 28,
        },
      ]
    }
  />
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "color": "#F56522",
          "flexShrink": 1,
          "fontFamily": "Baloo2-Bold",
          "fontSize": 20,
          "letterSpacing": 0.2,
          "lineHeight": 32,
        },
        false,
      ]
    }
  >
    add new cash option
  </Text>
</View>
`;

exports[`AddPaymentMethodButton should render correctly with isCash while still loading 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "flexDirection": "row",
      "gap": 12,
      "justifyContent": "center",
      "opacity": 0.5,
      "width": "100%",
    }
  }
>
  <test-file-stub
    fill="#F56522"
    style={
      [
        {
          "height": 24,
          "width": 24,
        },
        {
          "height": 28,
          "width": 28,
        },
      ]
    }
  />
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "color": "#F56522",
          "flexShrink": 1,
          "fontFamily": "Baloo2-Bold",
          "fontSize": 20,
          "letterSpacing": 0.2,
          "lineHeight": 32,
        },
        false,
      ]
    }
  >
    add new cash option
  </Text>
</View>
`;
